# ChangeLog for app-cdr/mirage2iso
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Jul 2010; Michał Górny (sedzimir) <mgorny.3ehbo@mailnull.com>
  mirage2iso-0.3.ebuild:
  Instead of working around EPREFIX confusion, decrease EAPI and just unpack
  tests manually when requested.

  27 Jun 2010; Michał Górny (sedzimir) <mgorny.3ehbo@mailnull.com>
  mirage2iso-0.3.ebuild:
  Update HOMEPAGE and SRC_URI.

  07 Feb 2010; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  -mirage2iso-0.2.ebuild, +mirage2iso-0.3.ebuild:
  Version bump.

  16 Jan 2010; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  mirage2iso-0.2.ebuild:
  Update SRC_URI and libassuan dependency.

  23 Dec 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  mirage2iso-0.2.ebuild:
  Export CC.

  05 Sep 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  -mirage2iso-0.1.ebuild, +mirage2iso-0.2.ebuild, metadata.xml:
  Version bump.

  03 Sep 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  +mirage2iso-0.1.ebuild, +metadata.xml:
  New ebuild for bug #283565.
