@@ -1,5 +1,5 @@
 DIST mirage2iso-0.3-tests.tar.xz 4185308 RMD160 7969ba017e8abd68ffcd6fb0b72ce2046480ae73 SHA1 222863194b25c0133d83b6c1c04df88d0e91fd61 SHA256 742d7cbaddb522967d858b5b0042e3ac7e6165134e1f69462292c7593d160258
 DIST mirage2iso-0.3.tar.bz2 12023 RMD160 11321692f9eaf15c280f32c53ab9ceb5cbbc4371 SHA1 fbc21c3491d7915ca97c3e967adbf3cb14c84988 SHA256 b0a88e9ed90c3f0ced212588270ffaa18e8574737a79c361dedeb00ab3db3c6a
-EBUILD mirage2iso-0.3.ebuild 925 RMD160 d432af0d44fb172b2b94dc66bf4541c486c17aba SHA1 4195c5d82fb0298c6fffa9fe441e49aaab5d16d8 SHA256 ba3a2389e4b9bb7205275e43f5bfe68ecc8e258dbfd1ba692df50c52e47659dc
-MISC ChangeLog 1098 RMD160 04fb6bdf4e8b4fef26da6baa7d802b67eddf1195 SHA1 c744846e1ed835168505c95e99ad461a8baf276f SHA256 eaefc4beba2807050dd6f88619004525d686ade686dbdfdf3ae4d4688dfaf948
+EBUILD mirage2iso-0.3.ebuild 948 RMD160 e08228400362bfc1154b18795515e6a039121c65 SHA1 8985142583bc36005f1be0caf92d5ef51d4eab5d SHA256 5bf92c025d97f3be476637f0deca57bcc79b2e4c16e765939601a0794f33c447
+MISC ChangeLog 1230 RMD160 7b49893aee1ebd8e06601acfb9d2ba976b8d49c6 SHA1 936e92cb81c204347389a429041729cf5f22e77b SHA256 f31dd7153922216eceee3b2e7196e0677e3a9d9add1a8b9898c1f529b97aa350
 MISC metadata.xml 342 RMD160 4d45508bfa3205bc806bee41c1076ef1f1529d64 SHA1 07110c16fd71b5bfdb033da33596b0b019b8f6fd SHA256 a6222c41141c9e243746e57301ab316868024281c3d9a8262155ba080acb98cf
